--- a/wiki/Preise.wiki
+++ b/wiki/Preise.wiki
@@ -12,11 +12,11 @@ Add your content here.
 
 Tool für die Eingabe von Transport und Zahlungskosten:
 
-•	Typ auswählen (Payment od. TRNASPORT) 
-•	Zahl. Methode wählen
-•	Destination wählen
-•	Gewicht von bis eingeben 
-•	Fix Preis od. VK Preis nach Gewicht eingeben
-•	Gewicht beim Artikel erfassen.
+ * Typ auswählen (Payment od. TRNASPORT) 
+ * Zahl. Methode wählen
+ * Destination wählen
+ * Gewicht von bis eingeben 
+ * Fix Preis od. VK Preis nach Gewicht eingeben
+ * Gewicht beim Artikel erfassen.
 
 Ergebnis: im Warenkorb wird nun je nach Warenkorbgewicht ein anderer Preis berechnet. 
