--- a/wiki/IntraSell4Newsletter.wiki
+++ b/wiki/IntraSell4Newsletter.wiki
@@ -1,13 +1,2 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Download PDF File: 
+[http://intrasell.googlecode.com/files/Newsletter%20IntraSell%204.pdf]
