--- a/IntraSell_DLL/IntraSellDB.cls
+++ b/IntraSell_DLL/IntraSellDB.cls
@@ -14,3 +14,19 @@ Attribute VB_Exposed = True
 Const DBTYPE_ACCESS = "ACCESS"
 Const DBTYPE_MSSQL = "MSSQL"
 Const DBTYPE_MYSQL = "MYSQL"
+
+
+Public Sub init(ByVal connString)
+    functionsDB.ConnStringODBC = connString
+    functionsDB.connOpen
+    Set CurrentDB = functionsDB.CurrentDB
+End Sub
+
+Public Sub destroy()
+    functionsDB.connClose
+End Sub
+
+ Public Function openRecordset(ByVal sql As String) As Recordset
+   Set openRecordset = functionsDB.openRecordset(sql, 0, 0)
+ End Function
+ 
