Edited wiki page Warenkorb through web user interface.

--- a/wiki/Warenkorb.wiki
+++ b/wiki/Warenkorb.wiki
@@ -10,3 +10,8 @@ Die Versandkosten können pro Kategorie oder auch pro Artikel eingegeben werden.
 Die Eingabe erfolgt in der Maske : Hautmaske->Vertriebskosten. 
 
 Die Berechnung der Kosten pro Artikel ist erst in der .NET Version von IntraSell möglich. 
+
+Screenshot Versandkosten:
+
+
+<img src='http://intrasell.googlecode.com/svn/trunk/Screenshots/Vertriebskosten.png' />
