--- a/wiki/Stammdatenverwaltung.wiki
+++ b/wiki/Stammdatenverwaltung.wiki
@@ -6,7 +6,7 @@ Hauptmaske->Kundengruppen
 
 Legen Sie zuerst die Kundengruppen an. 
 
-Hier ist die Eingabe von KundenNr Nummerkreisen und ob die Vorgänge MwSt enthalten sollen entscheidend für den weiteren Programmablauf. 
+Hier ist die Eingabe von KundenNr Nummer-kreisen und ob die Vorgänge MwSt enthalten sollen entscheidend für den weiteren Programmablauf. 
 
 http://intrasell.googlecode.com/svn/trunk/Screenshots/Kundengruppen.jpg
 
@@ -14,13 +14,18 @@ http://intrasell.googlecode.com/svn/trunk/Screenshots/Kundengruppen.jpg
 Hauptmaske->Kunden
 
 Wählen Sie immer zuerst die Kundengruppe aus. 
-Nach der Auswahl werden nur die Kunden aus dieser Kundengruppe gefiltert. 
-Neue Kundne werden in dieser Kundengruppe angelegt. 
+Nach der Auswahl werden nur die Kunden aus dieser Kundengruppe gefiltert. Neue Kunden werden in dieser Kundengruppe angelegt. 
 
-http://intrasell.googlecode.com/svn/trunk/Screenshots/kundengruppen.jpg
+Sie können mehrere Adressen pro Kunden eingeben. Z.Bsp. eine separate Adresse für Lieferungen oder Rechnungen. 
+
+http://intrasell.googlecode.com/svn/trunk/Screenshots/kunden.jpg
 
 == Lieferanten ==
 
 == Einstellungen ==
 
- 
+Hauptmaske->Einstellungen
+
+Hier können Sie diverse Programmeinstellungen vornehmen. 
+
+http://intrasell.googlecode.com/svn/trunk/Screenshots/einstellungen.jpg
