Edited wiki page Vorgaenge through web user interface.

--- a/wiki/Vorgaenge.wiki
+++ b/wiki/Vorgaenge.wiki
@@ -5,6 +5,8 @@ Sie können Angebote, Aufträge, Rechnungen, Lieferscheine u.e.m. verwalten.
 Die Vorgänge können konvertiert werden. D.h. Sie können ein Angebot in eine Rechnung konvertieren. hiermit werden alle Positionen übernommen. 
 
 
+<wiki:toc max_depth="2" />
+
 
 = Rechnungen =
 
@@ -29,6 +31,18 @@ http://intrasell.googlecode.com/svn/trunk/Screenshots/rechnung.jpg
 Kunden -> (Kunde Suchen) -> Vorgänge -> Rechnung  
 
 Eine Rechnung ohne MwSt. kann nur für einen Kunden ohne MwSt. angelegt werden. 
+
+
+== Rechnung mit Akonto ==
+Hauptmenü -> Liste Vorgänge
+
+Das ist eine Ablauf mit 2 Rechnungen. 
+Die erste Rechnung wird ganz normal erstellt. Beim Preis geben Sie den zu akontierende Preis ein. Schließen Sie die erste Rechnung nicht ab.  
+
+Die zweite Rechnung wird von der ersten Konvertiert! Das ist sehr wichtig für den Druck. Bei der zweiten Rechnung wird der Preis von der ersten Rechung gegen gerechnet. Schließen Sie diese Rechnung ab. 
+
+http://intrasell.googlecode.com/svn/trunk/Screenshots/rechnungdruck_akonto.jpg
+
 
 == Rechnungsvorlage anpassen ==
 
