Edited wiki page AddIn through web user interface.

--- a/wiki/AddIn.wiki
+++ b/wiki/AddIn.wiki
@@ -1,10 +1,13 @@
 #summary Was ist ein AddIn?
 
-= Die Idee vom AddIn  =
+= Die Idee von AddIn  =
 
 Ein AddIn ist eine Kapselung von Business Funktionalität. 
+
 Ein AddIn enthält Masken, Berichte  und Tabellen. 
+
 IntraSell kann ein Add in importieren, sodass die AddIn Funktionen Bestandteil vom System werden. 
+
 Ein AddIn kann auch jederzeit gelöscht werden. 
 
 
