--- a/wiki/Preise.wiki
+++ b/wiki/Preise.wiki
@@ -3,13 +3,21 @@
 = Einführung =
 
 
-= Preisgestalltung =
+= Preisgestaltung =
 
-Add your content here.
+Hier können Sie die Preise verwalten. 
 
+
+IS bietet die Möglichkeit die Preise auf 3 Arten zu berechnen. Es entstehen s.g. Regel für die Preiskalkulation. 
+
+Preisaufschlag basiert auf EK Preis in den Artikelstammdaten. 
+Preisaufschlag basiert auf VK Preis in den Artikelstammdaten. 
+Fixer VK Preis. 
+
+Diese Preisregel kann je nach Artikel, Artikelgruppe und Kunde.
 
 = Vertriebskosten =
-
+Hauptmenü -> Vertriebskosten 
 Tool für die Eingabe von Transport und Zahlungskosten:
 
  * Typ auswählen (Payment od. TRNASPORT) 
@@ -21,3 +29,8 @@ Tool für die Eingabe von Transport und Zahlungskosten:
 
 Ergebnis: im Warenkorb wird nun je nach Warenkorbgewicht ein anderer Preis berechnet. 
 [http://intrasell.googlecode.com/svn/trunk/Intrasell/dok/VersandkostenTool.gif]
+
+= Transportkosten = 
+Hauptmenü -> Vertriebskosten 
+Die Transportkosten können ebenfalls abgebildet werden. 
+ 
